--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -17,7 +17,6 @@ body {
     a{
         color: $red_two;
     }
-    margin-bottom: 235px;
 }
 
 /* These sections require min-height: 100% so footer can be fixed to bottom */
